PyVISA Changelog
================

1.11 (unreleased)
-----------------

- Drop Python 2 support PR #486
- Limit support to Python 3.6+ PR #486
- Improve the test suite and introduce tests relying on Keysight Virtual
  instrument software PR #486
- Add badges to the README PR #486
- Improve ResourceManager.list_opened_resource to list only open resources.
  Previously all resources created and not yet garbage collected were listed. PR #486
- Always normalize resource names PR #486
- Treat floating points number as double when parsing ASCII data blocks PR #486
- Allow bound methods as handler function (the use of is in tests prevented it) PR #486
- Deprecate some unused functions found in the util.py module PR #486
- Warn or raise if the beginning of a binary block is not found among the first characters.
  The default value is 25. PR #486
-
- Make the library less biased towards National Instrument by referring to IVI
  where relevant. In particular rename the @ni backend to @ivi PR #456
- Deprecate the `visa` module that is causing issue with the VISA payment
  processing package PR #448

1.10.1 (2019-09-11)
-------------------

- Fix reading binary values with an empty header PR #454
- Allow to use different headers in write_binary_values PR #454
- Remove `delay` kwarg from `read_ascii_values` which should never have been there PR #454
- Clarify the documentation about open_timeout PR #451


1.10 (2019-08-09)
-----------------

- Change the returned data_length for IEEE block of undefined size to 0 PR #435
- Add chunk_size and data_length keyword argument to read/query_binary_values PR #435
- Make the ordering of the visa library deterministic PR #399
- Properly close pipes when looking for a shared library path on linux #380
- Fixing missing argument for USBInstrument.usb_control_out PR #353
- avoid attempting to close already closed resources in del PR #424
- add a list_opened_resources method to the ResourceManager PR #415