@@ -4,6 +4,8 @@ PyVISA Changelog
 1.11 (unreleased)
 -----------------
 
+- Add support for dll_extra_paths in .pyvisarc to provide a way to specify paths
+  in which to look for dll on Windows and Python >= 3.8  PR #509
 - Drop Python 2 support PR #486
 - Limit support to Python 3.6+ PR #486
 - Improve the test suite and introduce tests relying on Keysight Virtual
